# assimpBasedViewer

./: AUTHORS  CMakeLists.txt
include/assimpBasedViewer/: assimpBasedViewer.h
src/: CMakeLists.txt  assimpBasedViewer.cpp
unitTesting/: CMakeLists.txt  cube.3ds  unit.cpp
